// Copyright (c) 2015, Google Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package google.bigtable.admin.v2;

import "google/api/annotations.proto";
import "google/bigtable/admin/v2/common.proto";
import "google/bigtable/admin/v2/instance.proto";
import "google/longrunning/operations.proto";
import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_outer_classname = "BigtableInstanceAdminProto";
option java_package = "com.google.bigtable.admin.v2";


// Service for creating, configuring, and deleting Cloud Bigtable Instances and
// Clusters. Provides access to the Instance and Cluster schemas only, not the
// tables metadata or data stored in those tables.
//
// Caution: This service is experimental. The details can change and the rpcs
// may or may not be active.
service BigtableInstanceAdmin {
  // Create an instance within a project.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc CreateInstance(CreateInstanceRequest) returns (google.longrunning.Operation) {
    option (google.api.http) = { post: "/v2/{name=projects/*}/instances" body: "*" };
  }

  // Gets information about an instance.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc GetInstance(GetInstanceRequest) returns (Instance) {
    option (google.api.http) = { get: "/v2/{name=projects/*/instances/*}" };
  }

  // Lists information about instances in a project.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc ListInstances(ListInstancesRequest) returns (ListInstancesResponse) {
    option (google.api.http) = { get: "/v2/{name=projects/*}/instances" };
  }

  // Updates an instance within a project.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc UpdateInstance(Instance) returns (Instance) {
    option (google.api.http) = { put: "/v2/{name=projects/*/instances/*}" body: "*" };
  }

  // Delete an instance from a project.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc DeleteInstance(DeleteInstanceRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { delete: "/v2/{name=projects/*/instances/*}" };
  }

  // Creates a cluster within an instance.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc CreateCluster(CreateClusterRequest) returns (google.longrunning.Operation) {
    option (google.api.http) = { post: "/v2/{name=projects/*/instances/*}/clusters" body: "cluster" };
  }

  // Gets information about a cluster.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc GetCluster(GetClusterRequest) returns (Cluster) {
    option (google.api.http) = { get: "/v2/{name=projects/*/instances/*/clusters/*}" };
  }

  // Lists information about clusters in an instance.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse) {
    option (google.api.http) = { get: "/v2/{name=projects/*/instances/*}/clusters" };
  }

  // Updates a cluster within an instance.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc UpdateCluster(Cluster) returns (google.longrunning.Operation) {
    option (google.api.http) = { put: "/v2/{name=projects/*/instances/*/clusters/*}" body: "*" };
  }

  // Deletes a cluster from an instance.
  //
  // Caution: This rpc is experimental. The details can change and the rpc
  // may or may not be active.
  rpc DeleteCluster(DeleteClusterRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = { delete: "/v2/{name=projects/*/instances/*/clusters/*}" };
  }
}

// Request message for BigtableInstanceAdmin.CreateInstance.
message CreateInstanceRequest {
  string name = 1;

  string instance_id = 2;

  Instance instance = 3;

  map<string, Cluster> clusters = 4;
}

// Request message for BigtableInstanceAdmin.GetInstance.
message GetInstanceRequest {
  string name = 1;
}

// Request message for BigtableInstanceAdmin.ListInstances.
message ListInstancesRequest {
  string name = 1;

  string page_token = 2;
}

// Response message for BigtableInstanceAdmin.ListInstances.
message ListInstancesResponse {
  repeated Instance instances = 1;

  string next_page_token = 2;
}

// Request message for BigtableInstanceAdmin.DeleteInstance.
message DeleteInstanceRequest {
  string name = 1;
}

// Request message for BigtableInstanceAdmin.CreateCluster.
message CreateClusterRequest {
  string name = 1;

  string cluster_id = 2;

  Cluster cluster = 3;
}

// Request message for BigtableInstanceAdmin.GetCluster.
message GetClusterRequest {
  string name = 1;
}

// Request message for BigtableInstanceAdmin.ListClusters.
message ListClustersRequest {
  // Values are of the form projects/<project id>/instances/<instance id>
  // Use <instance id> = '-' to list Clusters for all Instances in a project,
  // for example "projects/myproject/instances/-"
  string name = 1;

  string page_token = 2;
}

// Response message for BigtableInstanceAdmin.ListClusters.
message ListClustersResponse {
  repeated Cluster clusters = 1;

  string next_page_token = 2;
}

// Request message for BigtableInstanceAdmin.DeleteCluster.
message DeleteClusterRequest {
  string name = 1;
}

message InstanceOperationMetadata {
  string name = 1;

  repeated ClusterOperationMetadata clusters = 2;
}

message ClusterOperationMetadata {
  string name = 1;

  // Present if the operation involves the copying of table data
  // into the cluster.
  Progress tables_copied = 2;

  // Present if the operation involves (de)allocating serve nodes
  // in the cluster.
  Progress serve_nodes_allocated = 3;
}
